# molotilkar

./: Cargo.toml
src/: main.rs  message.rs  molotilka.rs  percent.rs
src/molotilka/: useless.rs
